# pipe-viewer-rs

./: Cargo.toml  README.md
src/: args.rs  lib.rs  main.rs  read.rs  stats.rs  write.rs
src/stats/: timer.rs
