[package]
name = "pipe-viewer-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

[dependencies]
clap = "3.2.5"
crossbeam = "0.8.1"
crossterm = "0.23.2"
